fixed margin for hero section on mobile

--- a/src/styles/global-in.css
+++ b/src/styles/global-in.css
@@ -53,6 +53,12 @@
   overflow-y: auto;
 }
 
+@media screen and (max-width: 991px) {
+  .Content {
+    margin-top: 70px;
+  }
+}
+
 /* Modal Styles */
 .modal-overlay {
   position: fixed;
